--- a/css/style.less
+++ b/css/style.less
@@ -30,3 +30,9 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/intro";
 @import "blocks/social";
 @import "blocks/btn";
+@import "blocks/works";
+@import "blocks/work";
+@import "blocks/portfolio";
+
+/* Helpers */ 
+@import "blocks/helpers";
